--- a/label_sync/labels.yaml
+++ b/label_sync/labels.yaml
@@ -223,6 +223,14 @@ repos:
         name: kind/documentation
         target: issues
         addedBy: humans
+      - color: f9d7c4
+        name: kind/feature-request
+        target: issues
+        addedBy: humans
+      - color: f9d3c4
+        name: kind/proposal
+        target: issues
+        addedBy: humans
       - color: a2eeef
         description: New feature or request
         name: kind/enhancement
@@ -242,5 +250,9 @@ repos:
         addedBy: humans
       - color: 7fd5ea
         name: area/control-plane
+        target: issues
+        addedBy: humans
+      - color: 72d5e0
+        name: area/api
         target: issues
         addedBy: humans
