--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -821,6 +821,11 @@ test_groups:
   alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 1
+- name: post-knative-test-infra-deploy-tools
+  gcs_prefix: knative-prow/logs/post-knative-test-infra-deploy-tools
+  alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
 dashboards:
 - name: serving
   dashboard_tab:
@@ -1791,6 +1796,9 @@ dashboards:
     base_options: ""
   - name: post-knative-sandbox-peribolos
     test_group_name: post-knative-sandbox-peribolos
+    base_options: ""
+  - name: post-knative-test-infra-deploy-tools
+    test_group_name: post-knative-test-infra-deploy-tools
     base_options: ""
 dashboard_groups:
 - name: knative
