--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -275,7 +275,7 @@ presubmits:
     dot-dev: true
   - go-coverage: true
     dot-dev: true
-  knative/net-contour:
+  knative-sandbox/net-contour:
   - build-tests: true
     dot-dev: true
   - unit-tests: true
@@ -806,7 +806,7 @@ periodics:
         memory: 16Gi
     env-vars:
     - ORG_NAME=google
-  knative/net-certmanager:
+  knative-sandbox/net-certmanager:
   - continuous: true
     dot-dev: true
   - nightly: true
@@ -815,7 +815,7 @@ periodics:
     dot-dev: true
   - auto-release: true
     dot-dev: true
-  knative/net-contour:
+  knative-sandbox/net-contour:
   - continuous: true
     dot-dev: true
   - nightly: true
