Missed config from https://github.com/knative/test-infra/pull/2298

--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -278,7 +278,7 @@ presubmits:
     dot-dev: true
   - go-coverage: true
     dot-dev: true
-  knative/net-certmanager:
+  knative-sandbox/net-certmanager:
   - build-tests: true
     dot-dev: true
   - unit-tests: true
